--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+$bg-color: rgb(18, 18, 18);
+$bg-container-color: rgb(42,42,42);
+$primary-content-color:rgb(41,178,90);
+$secondary-text-color:rgb(167,167,167);
