--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 $bg-color: rgb(18, 18, 18);
-$bg-container-color: rgb(42,42,42);
-$primary-content-color:rgb(41,178,90);
-$secondary-text-color:rgb(167,167,167);
+$bg-container-color: rgb(42, 42, 42);
+$primary-content-color: rgb(41, 178, 90);
+$secondary-text-color: rgb(167, 167, 167);
