--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,23 @@ $bg-color: rgb(18, 18, 18);
 $bg-container-color: rgb(42, 42, 42);
 $primary-content-color: rgb(41, 178, 90);
 $secondary-text-color: rgb(167, 167, 167);
+$bg-container-color-trans: rgba(42, 42, 42, 0.5);
+
+
+.client-layout-main{
+  &::-webkit-scrollbar{
+    width: 5px;
+  }
+  &::-webkit-scrollbar-thumb{
+    background-color: $primary-content-color;
+    border-radius: 100%;
+  }
+  &::-webkit-scrollbar-track{
+    background-color: $bg-container-color;
+  }
+}
+.home-tag-categories{
+  &::-webkit-scrollbar{
+    height: 0px;
+  }
+}
