--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -12,21 +14,53 @@ $primary-content-color: rgb(41, 178, 90);
 $secondary-text-color: rgb(167, 167, 167);
 $bg-container-color-trans: rgba(42, 42, 42, 0.5);
 
-
-.client-layout-main{
-  &::-webkit-scrollbar{
+.client-layout-main,
+.scroll-custom {
+  &::-webkit-scrollbar {
     width: 5px;
   }
-  &::-webkit-scrollbar-thumb{
+  &::-webkit-scrollbar-thumb {
     background-color: $primary-content-color;
     border-radius: 100%;
   }
-  &::-webkit-scrollbar-track{
+  &::-webkit-scrollbar-track {
     background-color: $bg-container-color;
   }
 }
-.home-tag-categories{
-  &::-webkit-scrollbar{
+.scroll-hidden {
+  &::-webkit-scrollbar {
     height: 0px;
   }
+}
+.tag-scroll {
+  &::-webkit-scrollbar {
+    height: 2px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary-content-color;
+    border-radius: 10%;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: $bg-container-color;
+    border-radius: 10%;
+  }
+}
+.playlist-scroll{
+  &::-webkit-scrollbar {
+    height: 5px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $primary-content-color;
+    border-radius: 10%;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: $bg-container-color;
+    border-radius: 10%;
+  }
+}
+.font-1 {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
